# better_drf_nested_serializer

./: .gitignore  README.md  helpers.py  pyproject.toml
.github/workflows/: publish-pypi.yml  publish-testpypi.yml
better_nested_serializer/: helpers.py
better_nested_serializer/serializers/: list_serializer.py  model_serializer.py
exceptions/: serializers.py
serializers/: list_serializer.py  model_serializer.py
test_app/: apps.py  models.py  serializers.py  services.py  tests.py
test_app/migrations/: 0001_initial.py
