[project]
name = "better-nested-serializer"
version = "0.1.0"
description = "An better DRF [Django REST Framework] serializer that normalizes nested objects into separate lists for improved performance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "djangorestframework>=3",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Include single-file top-level modules in the distribution
py-modules = ["helpers"]

[tool.setuptools.packages.find]
# Find import packages (those with __init__.py)
where = ["."]
include = [
    "exceptions",
    "serializers",
]
exclude = [
    "test_app",
    "test_app.*",
]
